// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package login_manager;

// Index stored along with key/value pairs to the persistent login screen
// storage folder.
message LoginScreenStorageIndex {
  // Contains a list of the keys currently stored
  // to that storage.
  repeated string keys = 1;
}
